--- a/nodejs-complete-course/project/public/css/main.css
+++ b/nodejs-complete-course/project/public/css/main.css
@@ -34,7 +34,7 @@ form {
 .main-header {
   width: 100%;
   height: 3.5rem;
-  background-color: #00695c;
+  background-color:  rgba(117, 48, 182, 0.432);
   padding: 0 1.5rem;
   display: flex;
   align-items: center;
@@ -66,7 +66,7 @@ form {
   background: transparent;
   border: none;
   text-decoration: none;
-  color: white;
+  color: peru;
   cursor: pointer;
 }
 
@@ -232,6 +232,22 @@ form {
   color: white;
 }
 
+.user-message {
+  margin: auto;
+  width: 90%;
+  border: 1px solid #4771fa;
+  padding: 0.5rem;
+  border-radius: 3px;
+  background: #b9c9ff;
+  text-align: center;
+}
+
+.user-message--error {
+  border-color: red;
+  background: rgb(255, 176, 176);
+  color: red;
+}
+
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
@@ -239,5 +255,9 @@ form {
 
   #side-menu-toggle {
     display: none;
+  }
+
+  .user-message {
+    width: 30rem;
   }
 }
